--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Robin's Apoli Additions
 
 nav:
     - Home: index.md
-    - Power Types:
+    - Types:
         - Power Types: types/power_types.md
     - Action Types:
         - Bientity Action Types: types/bientity_action_types.md
