--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
         - Power Types: types/power_types.md
     - Action Types:
         - Bientity Action Types: types/bientity_action_types.md
+        - Block Action Types: types/block_action_types.md
         - Entity Action Types: types/entity_action_types.md
         - Item Action Types: types/item_action_types.md
     - Condition Types:
