--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,18 +2,20 @@ site_name: Robin's Apoli Additions
 
 nav:
     - Home: index.md
-    - Types:
-        - Power Types: types/power_types.md
-    - Action Types:
-        - Bientity Action Types: types/bientity_action_types.md
-        - Block Action Types: types/block_action_types.md
-        - Entity Action Types: types/entity_action_types.md
-        - Item Action Types: types/item_action_types.md
-    - Condition Types:
-        - Bientity Condition Types: types/bientity_condition_types.md
-        - Block Condition Types: types/block_condition_types.md
-        - Entity Condition Types: types/entity_condition_types.md
-        - Item Condition Types: types/item_condition_types.md
+	- Types:
+		- Task Types: types/task_types.md
+		- Power Types: types/power_types.md
+	- Condition Types:
+		- Entity Condition Types: types/entity_condition_types.md
+		- Bientity Condition Types: types/bientity_condition_types.md
+		- Block Condition Types: types/block_condition_types.md
+		- Item Condition Types: types/item_condition_types.md
+	- Action Types:
+		- Entity Action Types: types/entity_action_types.md
+		- Bientity Action Types: types/bientity_action_types.md
+		- Block Action Types: types/block_action_types.md
+		- Item Action Types: types/item_action_types.md
+
 theme:
     name: material
     palette:
