--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,19 +2,29 @@ site_name: Robin's Apoli Additions
 
 nav:
   - Home: index.md
+  - Universal Powers: universal_powers.md
   - Types:
     - Task Types: task_types.md
     - Power Types: power_types.md
-  - Condition Types:
-    - Entity Condition Types: entity_condition_types.md
-    - Bientity Condition Types: bientity_condition_types.md
-    - Block Condition Types: block_condition_types.md
-    - Item Condition Types: item_condition_types.md
   - Action Types:
     - Entity Action Types: entity_action_types.md
     - Bientity Action Types: bientity_action_types.md
     - Block Action Types: block_action_types.md
     - Item Action Types: item_action_types.md
+  - Condition Types:
+    - Entity Condition Types: entity_condition_types.md
+    - Bientity Condition Types: bientity_condition_types.md
+    - Block Condition Types: block_condition_types.md
+    - Item Condition Types: item_condition_types.md
+  - JSON:
+    - Action JSON: action_json.md
+    - Condition JSON: condition_json.md
+    - Choice JSON: choice_json.md
+    - Choice Layer JSON: choice_layer_json.md
+    - Keybinding JSON: keybinding_json.md
+  - Other:
+    - Tag Extensions: tag_extensions.md
+    - Origin Selectors: origin_selectors.md
 
 theme:
     name: material
